fix: logo spacing

--- a/src/unicms_template_unical/static/css/unicms_unical.css
+++ b/src/unicms_template_unical/static/css/unicms_unical.css
@@ -50,7 +50,8 @@ p.tags {
 /** * Header Center Wrapper */
 @media (min-width: 992px) {
   .it-header-center-wrapper {
-    height: 130px;
+    min-height: 130px;
+    height: auto;
   }
 }
 /** * Logo */
